added the ability to lookup geoLocation from IP

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,9 @@
         "psr-4": {
             "Element\\Unique\\Tests\\": "tests/"
         }
+    },
+	"require": {
+		"ext-curl": "*",
+        "ext-json": "*"
     }
 }
